SideNavbar +Header +  done v1 Done

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <title>Pouyan &mdash; Portfolio</title>
