--- a/public/index.html
+++ b/public/index.html
@@ -11,20 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Pouyan &mdash; Portfolio</title>
-    <style>
-      * {
-        font-family: "Rubik", sans-serif;
-        margin: 0;
-        padding: 0;
-        scroll-behavior: smooth;
-        box-sizing: border-box;
-      }
-
-      html {
-        font-size: 62.5%;
-      }
-    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
